--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/ProductProfil_Doppelzylinder.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/ProductProfil_Doppelzylinder.cshtml
@@ -110,15 +110,19 @@
     function Vitess_4000() {
 
         let f = ids.length % parentElement.length; 
-        parentElement.forEach((item) => {
-           for(let fs =0;fs < ids. 
-            item.addEventListener('change', (event) => 
-            {
-                console.log(f);
-                // console.log(event.target.children);
-                // localStorage.options = Number(fx[ids[].id]);
+        console.log(fx);
+        parentElement.forEach((item) => 
+        {
+            for (let fs = 0; fs < ids;fs++) {
+                item.addEventListener('change', (event) => 
+                {
+                    console.log(f);
+                    // console.log(event.target.children);
+                    // localStorage.options = Number(fx[ids[].id]);
 
-            })
+
+                });
+            } 
         });
       
        
