--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Shared/_Layout.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Shared/_Layout.cshtml
@@ -29,6 +29,18 @@
                             <a class="nav-link text-dark" href=" @Url.Action("IndexKonfigurator", "Konfigurator")">Konfigurator</a>
                         </li>
                     </ul>
+                    <ul class="navbar-nav flex-grow-1">
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">SCHRITT 1</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" href=" @Url.Action("IndexKonfigurator", "Konfigurator")">SCHRITT 2</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" href=" @Url.Action("IndexKonfigurator", "Konfigurator")">SCHRITT 3</a>
+                        </li>
+                    </ul>
+                    
                 </div>
             </div>
         </nav>
