--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Konfigurator/IndexKonfigurator.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Konfigurator/IndexKonfigurator.cshtml
@@ -11,6 +11,12 @@
         <button type="button" class="btn btn-secondary"><a href="@Url.Action("System_Auswählen","Konfigurator")">2. System auswählen</a></button>
         <button type="button" class="btn btn-secondary">3. Parameter einstellen</button>
     </div>
+    <form asp-action="SaveOrder" enctype="multipart/form-data" asp-controller="Konfigurator">
+  
+        @Html.HiddenFor(m => m.userKey)
+
+        <input name="ItemCount" id="itemcountOptions" />
+
     <div id="InformBar">
         <div id="blockSclussel" >
             <div id="sclusselInfo">
@@ -23,18 +29,18 @@
                 </div>
                 
                 <div>
-                    <button id="removeButton">-</button>
-                    <button id="addButton">+</button>
+                        <input id="removeButton" type="button" value="-">
+                        <input id="addButton" type="button" value="+">
                 </div>
             </div>
             <div id="itemKeyBlock">
                 <div  class="TexCount">
                     <h6>1</h6>
                     <div id="TexInputKey">
-                        <input id="inputS" placeholder="Name des Schlüssels" type="text" />
+                            <input id="inputS" name="NameKey" placeholder="Name des Schlüssels" type="text" />
                     </div>
                     <div>
-                        <input id="inputCount"  value="1" type="text" />
+                            <input id="inputCount" name="CountKey" value="1" type="text" />
                     </div>
                 </div>
              
@@ -51,8 +57,8 @@
                 </div>
 
                 <div>
-                    <button id="removeButtonTur">-</button>
-                    <button id="addButtonTur">+</button>
+                    <input id="removeButtonTur" type="button" value="-">
+                    <input id="addButtonTur" type="button" value="+">
                 </div>
             </div>
             <div>
@@ -64,16 +70,17 @@
                                     <h6 id="counterTur">1</h6>
                                 </div>
 
-                                <div>
-                                    <input id="inputTur" placeholder="Name der Tür" />
-                                </div>
-
+                                            <div>
+                                                <input id="inputTur" name="Turname" placeholder="Name der Tür" />
+                                            </div>
                                 <div>
                                     <button id="infoButten">i</button>
                                 </div>
                             </div>
+                                <details>
+                                    <summary>  </summary>
                             <div id="SelectTurItem">
-                                <select id="TypeSelectTurItem">
+                                    <select id="TypeSelectTurItem" name="ZylinderId">
                                     @foreach (var list in ViewBag.Zylinder_Typ)
                                     {
                                         <option>@list.nameType</option>
@@ -81,7 +88,7 @@
                                 </select>
                             </div>
                             <div id="SelectTurItem">
-                                <select id="TypeSelectTurItem">
+                                    <select id="TypeSelectTurItem" name="aussen">
                                     <option>Außenlänge</option>
                                     @foreach (var list in ViewBag.Aussen)
                                     {
@@ -90,7 +97,7 @@
                                 </select>
                             </div>
                             <div id="SelectTurItem">
-                                <select id="TypeSelectTurItem">
+                                    <select id="TypeSelectTurItem" name="innen">
                                     <option>Innenlänge</option>
                                     @foreach (var list in ViewBag.Innen)
                                     {
@@ -100,7 +107,7 @@
                             </div>
                            
                             <div id="SelectTurItem">
-                                <select id="TypeSelectTurItem">
+                                        <select id="TypeSelectTurItem" name="Options">
                                     <option>Options</option>
                                     @foreach (var list in ViewBag.OptionsName)
                                     {
@@ -108,63 +115,95 @@
                                     }
                                 </select>
                             </div>
+                                </details>
                         </div>
-                      
+@* 
+                            horizontal *@
+
                     </div>
                 <div id="InfoValue">
-                    <div id="valueCheket">
-                            <label class="custom-checkbox">
-                                <input type="checkbox" data-value="Value 1">
-                                <span class="checkmark"></span>
-                           @*      <span class="checkbox-label">Value 1</span> *@
-                            </label>
+                    <div id="horizontal">
+                                <div id="checkboxContainer">
+                                    <input type="checkbox" style="" id="checkbox1">
+                                    <input type="hidden" name="IsOppen" value="false" id="I1.checkbox1">
+                                </div>
                     </div>
-                       
-                        @* <label class="custom-checkbox">
-                            <input type="checkbox" data-value="Value 2">
-                            <span class="checkmark"></span>
-                            <span class="checkbox-label">Value 2</span>
-                        </label>
-                        <label class="custom-checkbox">
-                            <input type="checkbox" data-value="Value 3">
-                            <span class="checkmark"></span>
-                            <span class="checkbox-label">Value 3</span>
-                        </label> *@
-                        
                 </div>
                 </div>
             </div>
         </div>
     </div>
+     
+        <input type="submit" class="btn btn-success" id="input" value="Weiter" />
+    </form>
 </div>
 <script>
+
         let blockCount = 1;
         
         let blockTur = 1;
+   
+    var data = JSON.parse(localStorage.getItem(`checkbox${blockCount}`));
 
-    document.addEventListener("DOMContentLoaded", function () {
-        const checkboxes = document.querySelectorAll('.custom-checkbox input[type="checkbox"]');
+   
 
-        checkboxes.forEach(function (checkbox) {
-            checkbox.addEventListener('change', function () {
-                updateCheckboxLabel(this);
-            });
-            updateCheckboxLabel(checkbox);
+    function createCustomCheckbox(id) {
+        var checkbox = document.getElementById(id);
+        var checkboxValue = false;
+
+        if (!localStorage.getItem(id)) {
+            localStorage.setItem(id, 'false');
+        }
+        // Проверяем, есть ли уже сохраненное значение в локальном хранилище
+        var savedValue = localStorage.getItem(id);
+
+        // Если есть сохраненное значение, устанавливаем его в чекбоксе
+        if (savedValue !== null) {
+            checkbox.checked = (savedValue === 'true'); // преобразуем строку в булево значение
+            checkboxValue = checkbox.checked;
+
+        }
+
+        // Обработчик события изменения состояния чекбокса
+        checkbox.addEventListener('change', function () {
+            // Сохраняем состояние чекбокса в локальное хранилище
+            localStorage.setItem(id, this.checked);
+            // Записываем значение чекбокса в переменную
+            checkboxValue = this.checked;
+
+            let switches = document.getElementById(`I${blockTur}.${id}`);
+            if (switches !== null)
+                switches.value = String(this.checked);
+
+        
         });
+    }
 
-        function updateCheckboxLabel(checkbox) {
-            const label = checkbox.parentNode.querySelector('.checkbox-label');
-            label.textContent = checkbox.checked ? checkbox.dataset.value + ' (Checked)' : checkbox.dataset.value + ' (Unchecked)';
-        }
-    });
-        // Функция для удаления блока
-        function removeBlockTur() {
-        let blockToRemove = document.getElementById('BlockTur-' + blockTur);
-            if (blockToRemove) {
-                blockToRemove.remove();
-            blockTur--;
-            }
-        }
+    function foo() {
+        localStorage.clear();
+        createCustomCheckbox(`checkbox${blockCount}`);
+    }
+
+    window.onload = foo()
+
+    // Создаем кастомные чекбоксы
+    createCustomCheckbox('checkbox1');
+
+
+    function removeBlockTur() {
+                let blockToRemove = document.getElementById('BlockTur-' + blockTur);
+                    if (blockToRemove) {
+                        blockToRemove.remove();
+          
+                        for (let s = 0; s < blockCount; s++) 
+                        {
+                            let blockToRemoveTurValue = document.getElementById(`${blockTur}.checkbox${s}`);
+                            blockToRemoveTurValue.remove();
+                        }
+
+                    blockTur--;
+                    }
+                }
 
         function addBlockTur() {
         blockTur++;
@@ -175,19 +214,21 @@
         newBlock.innerHTML = `  <div class="TexCountTur">
                                 <div id="ItemTur">
                                     <div>
-                                                <h6 id="counterTur">${blockTur}</h6>
+                                       <h6 id="counterTur">${blockTur}</h6>
                                     </div>
 
                                     <div>
-                                        <input id="inputTur" placeholder="Name der Tür" />
+                                            <input id="inputTur" name="Turname" placeholder="Name der Tür" />
                                     </div>
 
                                     <div>
                                         <button id="infoButten">i</button>
                                     </div>
                                 </div>
+                                      <details>
+                                        <summary>  </summary>
                                 <div id="SelectTurItem">
-                                    <select id="TypeSelectTurItem">
+                                        <select id="TypeSelectTurItem" name="ZylinderId">
                                     @foreach (var list in ViewBag.Zylinder_Typ)
                                     {
                                       <option>@list.nameType</option>
@@ -195,7 +236,7 @@
                                     </select>
                                 </div>
                                 <div id="SelectTurItem">
-                                    <select id="TypeSelectTurItem">
+                                        <select id="TypeSelectTurItem" name="aussen">
                                         <option>Außenlänge</option>
                                         @foreach (var list in ViewBag.Aussen)
                                         {
@@ -204,7 +245,7 @@
                                     </select>
                                 </div>
                                 <div id="SelectTurItem">
-                                    <select id="TypeSelectTurItem">
+                                        <select id="TypeSelectTurItem" name="innen">
                                         <option>Options</option>
                                         @foreach (var list in ViewBag.Innen)
                                         {
@@ -214,7 +255,7 @@
                                 </div>
                                
                                 <div id="SelectTurItem">
-                                         <select id="TypeSelectTurItem">
+                                             <select id="TypeSelectTurItem" name="Options">
                                         <option>Options</option>
                                          @foreach (var list in ViewBag.OptionsName)
                                          {
@@ -223,68 +264,112 @@
                                     </select>
                                 </div>
                             </div>
+                                     </details>
                 `;
 
-        var existingElement = document.getElementById('valueCheket');
+            document.getElementById('blockInfo').appendChild(newBlock);
 
-        // Клонируем элемент
-        var newElement = existingElement.cloneNode(true);
-       
-        // Добавляем новый блок в контейнер
-        document.getElementById('blockInfo').appendChild(newBlock);
-        document.getElementById('InfoValue').appendChild(newElement);
-       
+            let horizont = document.createElement('div');
+            horizont.id = 'horizontal';
+          
+
+            for (let i = 0; i < blockCount; i++) 
+            {
+
+                let newBlockTur = document.createElement('div');
+                newBlockTur.innerHTML = ` <div id="checkboxContainer">
+                            <input type="checkbox" id=${blockTur}.checkbox${i}>
+                   <input type="hidden" name="IsOppen" value="false" id="I${blockTur}.checkbox${i}">
+                     </div>`;
+
+                horizont.appendChild(newBlockTur);
+
+                document.getElementById('InfoValue').appendChild(horizont);
+
+                createCustomCheckbox(`${blockTur}.checkbox${i}`);
+            }
     }
-        function removeBlock() {
+        function removeBlock() 
+        {
             let blockToRemove = document.getElementById('TexCount-' + blockCount);
-            let blockToRemoveTurValue = document.getElementById('chekbox-' + blockCount);
-           
+        
             if (blockToRemove) 
             {
                 blockToRemove.remove();
-                blockToRemoveTurValue.remove();
-                blockCount--;
+                if (blockTur > 1) 
+                {
+                    for (let f = 1; f <= blockTur;) {
+                           
+                            let blockToRemoveTurValue = document.getElementById(`${f}.checkbox${blockCount}`);
+                            blockToRemoveTurValue.remove();
+                            
+                            console.log(blockCount);
+                            console.log(f);
+                            console.log(blockToRemoveTurValue);
+                            if(f==1)
+                            blockCount--;
+                        f++;
+                        
+                    }
+                       
+                }
+
+                    else 
+                    {
+                        let blockToRemoveTurValue = document.getElementById(`${blockTur}.checkbox${blockCount}`);
+                        blockToRemoveTurValue.remove();
+                        console.log(blockCount);
+                    }
+
+            lockCount--;
             }
               
         }
 
         // Функция для добавления блока
-        function addBlock() {
-            blockCount++;
-
-            // Создаем новый блок
-            let newBlock = document.createElement('div');
-            newBlock.id = 'TexCount-' + blockCount;
-            newBlock.innerHTML = `
-                                <div  class="TexCount">
-                                    <h6>${blockCount}</h6>
+    function addBlock() {
+        blockCount++;
+        
+        let item = document.getElementById('itemcountOptions');
+        item.value = blockCount;
+        // Создаем новый блок
+        let newBlock = document.createElement('div');
+        newBlock.id = 'TexCount-' + blockCount;
+        newBlock.innerHTML = `
+                                    <div  class="TexCount">
+                         <h6>${blockCount}</h6>
                             <div id="TexInputKey">
-                                <input id="inputS" placeholder="Name des Schlüssels" type="text" />
+                                    <input id="inputS" name="NameKey" placeholder="Name des Schlüssels" type="text" />
                             </div>
                             <div>
-                                <input id="inputCount"  value="1" type="text" />
+                                     <input id="inputCount" name="CountKey" value="1" type="text" />
                             </div>
                         </div>
+
             `;
 
             let newBlockTur = document.createElement('div');
-        newBlockTur.id = 'chekbox-' + blockCount;
-        newBlockTur.innerHTML = ` <label class="custom-checkbox">
-                                    <input type="checkbox" data-value="Value 1">
-                                    <span class="checkmark"></span>
-                                  
-                                </label>
-            `;
-
-            // Добавляем новый блок в контейнер
+            newBlockTur.innerHTML = ` <div id="checkboxContainer">
+                                                    <input type="checkbox" id=${blockTur}.checkbox${blockCount}>
+                                            <input type="hidden" name="IsOppen" value="false" id="I${blockTur}.checkbox${blockCount}">
+                                    </div>`;
+            
             document.getElementById('itemKeyBlock').appendChild(newBlock);
-        document.getElementById('valueCheket').appendChild(newBlockTur);
-        }
+            document.getElementById('horizontal').appendChild(newBlockTur);
 
-        // Назначаем обработчики событий для кнопок
+            createCustomCheckbox(`${blockTur}.checkbox${blockCount}`);
+
+            var hiddenInput = document.createElement('input');
+             hiddenInput.setAttribute('type', 'hidden');
+            hiddenInput.setAttribute('id', `I${blockTur}.checkbox${blockCount}`);
+            hiddenInput.setAttribute('name', 'IsOppen');
+            hiddenInput.setAttribute('value', JSON.stringify(data));
+
+            document.getElementById('checkboxContainer').append(hiddenInput);
+    }
+
         document.getElementById('removeButton').addEventListener('click', removeBlock);
         document.getElementById('addButton').addEventListener('click', addBlock);
-
 
     document.getElementById('removeButtonTur').addEventListener('click', removeBlockTur);
     document.getElementById('addButtonTur').addEventListener('click', addBlockTur);
