--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Konfigurator/System_Auswählen.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Konfigurator/System_Auswählen.cshtml
@@ -61,30 +61,65 @@
                     @foreach (var item in ViewBag.b)
                     {
                         <div id="ExelItem">
-                            <img decoding="async" src="@("~/image/"+@item.ImageName)" asp-append-version="true" width="300px" height="300px" />
-                            <h6>@item.Name</h6>
-                            <p>@item.description</p>n
-                      
-                        <h6 id="cost">@item.Cost</h6>
-                       
-                       </div>
+                            <div id="productImage">
+                                <img decoding="async" style="border: 2px solid rgba(237,237,237,0.5);" src="@("~/image/"+@item.ImageName)" asp-append-version="true" width="300px" height="300px" />
+                            </div>
+                            <div id="productMenuInfo">
+                                <div id="ProductNameUndCost">
+
+                                    <div>
+                                        <h3>@item.Name</h3>
+                                    </div>
+
+                                    <div style="margin-left: auto;">
+                                        <h4 id="cost">ab @item.Cost €</h4>
+                                    </div>
+
+                                </div>
+
+                                <div id="product_desciptions">
+                                    <h5>@item.description</h5>
+                                </div>
+                                <div id="productChek">
+                                    <button class="btn btn-danger" id="chekProduct">WÄHLEN</button>
+                                </div>
+                            </div>
+
+
+                        </div>
                     }
                 } 
                 @if (ViewBag.c != null)
                 {
-                    
+
                     @foreach (var item in ViewBag.c)
                     {
                         <div id="ExelItem">
-                            <div>
-                                <img decoding="async" src="@("~/image/"+@item.ImageName)" asp-append-version="true" width="300px" height="300px" />
+                            <div id="productImage">
+                                <img decoding="async" style="border: 2px solid rgba(237,237,237,0.5);" src="@("~/image/"+@item.ImageName)" asp-append-version="true" width="300px" height="300px" />
                             </div>
-                           <div>
-                                <h6>@item.Name</h6>
-                                <p>@item.description</p>
+                            <div id="productMenuInfo">
+                                <div id="ProductNameUndCost">
 
-                                <h6 id="cost">@item.Cost</h6>
-                           </div>
+                                    <div>
+                                        <h3>@item.Name</h3>
+                                    </div>
+
+                                    <div style="margin-left: auto;">
+                                        <h4 id="cost">ab @item.Cost €</h4>
+                                    </div>
+
+                                </div>
+
+                                <div id="product_desciptions">
+                                    <h5>@item.description</h5>
+                                </div>
+                                <div id="productChek">
+                                    <button class="btn btn-danger" id="chekProduct">WÄHLEN</button>
+                                </div>
+                            </div>
+
+
                         </div>
                     }
                     
