--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/wwwroot/css/site.css
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/wwwroot/css/site.css
@@ -97,7 +97,9 @@ a {
 }
 
 
-
+#InfoValue {
+    display: grid;
+}
 #InformBar {
     margin-top: 50px;
     font-size: 16px;
@@ -438,7 +440,7 @@ a {
     padding: 5px;
 }
 #TypeSelectTurItem {
-    margin-left: -10px;
+    margin-top: 5px;
     height: 30px;
     width: 235px
 }
@@ -447,8 +449,7 @@ a {
 }
 .custom-checkbox {
     display: block;
-    margin-bottom: 10px;
-    padding-bottom: 200px;
+
 }
 
     .custom-checkbox input {
@@ -457,8 +458,8 @@ a {
 
 .checkmark {
     display: inline-block;
-    width: 20px;
-    height: 20px;
+    width: 40px;
+    height: 40px;
     border: 2px solid #ccc;
     cursor: pointer;
 }
@@ -477,6 +478,24 @@ a {
 #turInfo {
     display: flex;
 }
-#valueCheket {
-    display: flex
+#checkboxContainer {
+    display: grid;
+    gap: 200px;
+    margin-top: 15px;
+}
+#horizontal {
+    display: flex;
+    gap: 20px;
+    margin-left: 10px;
+}
+#checkboxContainer > input[type="checkbox"] {
+    width: 20px;
+    height: 20px;
+}
+
+  
+summary {
+    margin-left: -10px;
+    margin-top: -25px;
+    padding: 0px;
 }
