--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Konfigurator/System_Auswählen.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Konfigurator/System_Auswählen.cshtml
@@ -124,6 +124,105 @@
                     }
                     
                 }
+                @if (ViewBag.d != null)
+                {
+                    @foreach (var item in ViewBag.d)
+                    {
+                        <div id="ExelItem">
+                            <div id="productImage">
+                                <img decoding="async" style="border: 2px solid rgba(237,237,237,0.5);" src="@("~/image/"+@item.ImageName)" asp-append-version="true" width="300px" height="300px" />
+                            </div>
+                            <div id="productMenuInfo">
+                                <div id="ProductNameUndCost">
+
+                                    <div>
+                                        <h3>@item.Name</h3>
+                                    </div>
+
+                                    <div style="margin-left: auto;">
+                                        <h4 id="cost">ab @item.Cost €</h4>
+                                    </div>
+
+                                </div>
+
+                                <div id="product_desciptions">
+                                    <h5>@item.description</h5>
+                                </div>
+                                <div id="productChek">
+                                    <button class="btn btn-danger" id="chekProduct">WÄHLEN</button>
+                                </div>
+                            </div>
+
+
+                        </div>
+                    }
+                }
+                @if (ViewBag.f != null)
+                {
+                    @foreach (var item in ViewBag.f)
+                    {
+                        <div id="ExelItem">
+                            <div id="productImage">
+                                <img decoding="async" style="border: 2px solid rgba(237,237,237,0.5);" src="@("~/image/"+@item.ImageName)" asp-append-version="true" width="300px" height="300px" />
+                            </div>
+                            <div id="productMenuInfo">
+                                <div id="ProductNameUndCost">
+
+                                    <div>
+                                        <h3>@item.Name</h3>
+                                    </div>
+
+                                    <div style="margin-left: auto;">
+                                        <h4 id="cost">ab @item.Cost €</h4>
+                                    </div>
+
+                                </div>
+
+                                <div id="product_desciptions">
+                                    <h5>@item.description</h5>
+                                </div>
+                                <div id="productChek">
+                                    <button class="btn btn-danger" id="chekProduct">WÄHLEN</button>
+                                </div>
+                            </div>
+
+
+                        </div>
+                    }
+                }
+                @if (ViewBag.e != null)
+                {
+                    @foreach (var item in ViewBag.e)
+                    {
+                        <div id="ExelItem">
+                            <div id="productImage">
+                                <img decoding="async" style="border: 2px solid rgba(237,237,237,0.5);" src="@("~/image/"+@item.ImageName)" asp-append-version="true" width="300px" height="300px" />
+                            </div>
+                            <div id="productMenuInfo">
+                                <div id="ProductNameUndCost">
+
+                                    <div>
+                                        <h3>@item.Name</h3>
+                                    </div>
+
+                                    <div style="margin-left: auto;">
+                                        <h4 id="cost">ab @item.Cost €</h4>
+                                    </div>
+
+                                </div>
+
+                                <div id="product_desciptions">
+                                    <h5>@item.description</h5>
+                                </div>
+                                <div id="productChek">
+                                    <button class="btn btn-danger" id="chekProduct">WÄHLEN</button>
+                                </div>
+                            </div>
+
+
+                        </div>
+                    }
+                }
 
                 <input type="submit" value="Create Exel" id="closeMenu" class="btn btn-dark" />
             </form>
